# eddystone_nrf5x_beacon

./: CMakeLists.txt  README.md  eddystone.c  eddystone.h  main.c
pca10028/: Makefile  upload.jlink
